--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ hr {
     margin: 100px auto 100px auto;
     width: 55%;
     text-align: left;
-    /*line-height: 2.5;*/
+    line-height: 2.5;
   }
 
 .p2 {
