--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@ div {
 }
 */
 h1 {
-  margin-top: 0;
-  margin-bottom: 10px;
+  /* margin-top: 0;
+  margin-bottom: 10px; */
   font-family: 'Sacramento', cursive;
   font-size: 3.125rem;
-  padding-top: 100px;
+  /* padding-top: 100px; */
   color: #66BFBF;
 }
 
@@ -21,7 +21,9 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   color: #66BFBF;
-  padding-top: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  /* padding-top: 20px; */
 }
 
 h3 {
@@ -49,74 +51,191 @@ hr {
 
 .top-container {
   background-color: #d8e3e7;
-  margin-top: 0;
-  padding-top: 0;
+  /* margin-top: 0;
+  padding-top: 0; */
+  width: 100%;
+  height: 100vh;
 }
 
 .middle-container {
   background-color: #d8e3e7;
-  margin: 0 auto;
-
+  /* margin: 0 auto; */
+  width: 100%;
 }
 
 .bottom-container {
-  background-color: #d5ecc2;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 20px;
+  position: relative;
+  background-color: #d8e3e7;
+  /* margin-top: 0;
+  margin-bottom: 0; */
+  /* padding-top: 20px;
   padding-bottom: 30px;
-  line-height: 2;
+  line-height: 2; */
+  width: 100%;
+  height: 100vh;
 }
 
+.clouds {}
+
 .top-c {
-  position: absolute;
-  right: 300px;
-  top: 40px;
+  position: relative;
+  right: -25%;
+  top: 50px;
 }
 
 .bottom-c {
-  position: absolute;
-  bottom: 400px;
-  left: 300px;
+  position: relative;
+  bottom: 50%;
+  left: -30%;
 }
 
 .mount {
-  padding-top: 80px;
+  /* padding-top: 80px; */
+}
+
+.mount1 {
+  display: flex;
+  margin-bottom: 0;
+  justify-content: center;
 }
 
 .myimage {
   width: 13%;
-  padding-top: 40px;
-  padding-bottom: 0;
+  margin-top: 4%;
+  margin-bottom: 1%;
+  /* padding-top: 40px;
+  padding-bottom: 0; */
 }
 
-.profile{
+.flex5 {
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.football {
+  width: 10%;
+}
+
+.cricket {
+  width: 10%;
+  margin-left: 2%;
+}
+
+.music {
+  width: 10%;
+  margin-left: 2%;
+}
+
+.movies {
+  width: 10%;
+  margin-left: 2%;
+}
+
+.tv {
+  width: 10%;
+  margin-left: 2%;
+}
+
+.profile {
+  width: 100%;
+  height: 100vh;
+}
+
+.hobbies {
+  width: 100%;
+  height: 100vh;
+  /*display: grid;
+  grid-template-columns: 75% 75% 75%;
+  grid-area: hobbies;
+  grid-template-columns: 2fr 2fr;
+  grid-template-areas:
+  "hobby3 hobby3"
+  "hobby1 hobby1"
+  "hobby2 hobby2";*/
+  display: flex;
+  flex-direction: column;
+}
+
+.flex1{
+  display: flex;
+  justify-content: center;
+}
+
+.flex2{
+  display: flex;
+  justify-content: center;
+}
+
+.flex3 {
+  flex-direction: column;
+  width: 50%;
+}
+
+.flex4 {
+  flex-direction: column;
+}
+
+.header1{
+  padding-right: 45%;
+}
+
+.header2 {
+  padding-left: 10%;
+}
+
+.hobby3 {
+  grid-area: hobby3;
+  margin-bottom: 5%;
+}
+
+.contact-me {
+  vertical-align: middle;
+  padding-top: 15%;
+}
+
+.links {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-color: #d5ecc2;
+}
+
+.hobby-row1 {
+  grid-area: hobby1;
+  margin: 3%;
+}
+
+.hobby-row2 {
+  grid-area: hobby2;
+  margin: 3%;
 }
 
 .coding {
-  width: 25%;
-  float: left;
+  width: 15%;
+  /* float: left;
   margin-right: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
 }
 
 .gaming {
-  width: 25%;
-  float: right;
+  width: 15%;
+  order: 3;
+  /* float: right;
   margin-left: 30px;
-  margin-top: 10px;
+  margin-top: 10px; */
 
 }
 
 .new {
-  font-size: 1.25rem;
-  /*margin-top: 10px;*/
-  line-height: 2;
+  /* font-size: 1.25rem;
+  margin-top: 10px;
+  line-height: 2; */
   color: #66BFBF;
 }
 
 .p1 {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .btn {
@@ -155,26 +274,41 @@ hr {
   }
 
   .hobby-row {
-    margin: 100px auto 100px auto;
+    /* margin: 100px auto 100px auto;
     width: 55%;
     text-align: left;
-    line-height: 2.5;
+    line-height: 2.5; */
   }
 
 .p2 {
-  margin: 0 auto 0 auto;
-  padding-top: 10px;
+  /* margin: 0 auto 0 auto;
+  padding-top: 10px; */
   color: #11999E;
 }
 
 .p3 {
-  padding-top: 20px;
+  /* padding-top: 20px; */
 }
 
 .p4 {
-  padding-bottom: 80px;
+  /* padding-bottom: 80px; */
 }
 
 .p5 {
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
+  margin-right: 2%;
+  padding-left: 12%;
+}
+
+.p6{
+  margin-left: 2%;
+  padding-right: 12%;
+}
+
+#hr1 {
+  margin-bottom: 5%;
+}
+
+#hr2 {
+  margin-top: 0;
 }
